<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">&#48;</string>
    <string name="one">&#49;</string>
    <string name="two">&#50;</string>
    <string name="three">&#51;</string>
    <string name="four">&#52;</string>
    <string name="five">&#53;</string>
    <string name="six">&#54;</string>
    <string name="seven">&#55;</string>
    <string name="eight">&#56;</string>
    <string name="nine">&#57;</string>

    <string name="plus">&#43;</string>
    <string name="minus">&#152;</string>
    <string name="multiplication">&#215;</string>
    <string name="division">&#247;</string>
    <string name="equal">&#61;</string>
    <string name="clear">&#171;</string>
    <string name="all_clear">&#67;</string>
    <string name="plus_minus">&#177;</string>
    <string name="percent">&#37;</string>
    <string name="point">&#149;</string>
</resources>