<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#8F8F8F"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="top|end"
            android:text="@string/zero"
            android:textSize="45sp"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:gravity="top|end"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="60sp" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#131313">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/all_clear"
                style="@style/btnStyle"
                android:backgroundTint="#0044FF"
                android:text="@string/all_clear"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/plus_minus"
                style="@style/btnStyle"
                android:backgroundTint="#0044FF"
                android:text="@string/plus_minus"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/percent"
                style="@style/btnStyle"
                android:backgroundTint="#0044FF"
                android:text="@string/percent"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/clear"
                style="@style/btnStyle"
                android:backgroundTint="#0044FF"
                android:text="@string/clear"
                android:textColor="#000000" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                style="@style/btnStyle"
                android:text="@string/one" />

            <Button
                android:id="@+id/two"
                style="@style/btnStyle"
                android:text="@string/two" />

            <Button
                android:id="@+id/three"
                style="@style/btnStyle"
                android:text="@string/three" />

            <Button
                android:id="@+id/division"
                style="@style/btnStyle"
                android:backgroundTint="#0044FF"
                android:text="@string/division"
                android:textColor="@color/white" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                style="@style/btnStyle"
                android:text="@string/four" />

            <Button
                android:id="@+id/five"
                style="@style/btnStyle"
                android:text="@string/five" />

            <Button
                android:id="@+id/six"
                style="@style/btnStyle"
                android:text="@string/six" />

            <Button
                android:id="@+id/multiplication"
                style="@style/btnStyle"
                android:backgroundTint="#0044FF"
                android:text="@string/multiplication"
                android:textColor="@color/white" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                style="@style/btnStyle"
                android:text="@string/seven" />

            <Button
                android:id="@+id/eight"
                style="@style/btnStyle"
                android:text="@string/eight" />

            <Button
                android:id="@+id/nine"
                style="@style/btnStyle"
                android:text="@string/nine" />

            <Button
                android:id="@+id/minus"
                style="@style/btnStyle"
                android:backgroundTint="#FF0000"
                android:text="–"
                android:textColor="@color/white" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/point"
                style="@style/btnStyle"
                android:text="•" />

            <Button
                android:id="@+id/zero"
                style="@style/btnStyle"
                android:text="@string/zero" />

            <Button
                android:id="@+id/equals"
                style="@style/btnStyle"
                android:text="@string/equal" />

            <Button
                android:id="@+id/plus"
                style="@style/btnStyle"
                android:backgroundTint="#FF0000"
                android:text="@string/plus"
                android:textColor="@color/white" />

        </TableRow>

    </TableLayout>

</LinearLayout>